Repaired button class btn-large to btn-lg Added/adjusted white space between buttons and image in small views.

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -284,6 +284,12 @@ body.install {
     -o-border-radius:10px;
     border-radius:10px;
   }
+  a.btn-lg {
+    font-size: 16px; 
+  }
+  div.btn-group {
+    margin-bottom: 15px;
+  }
 }
 
 /* ==========================================================================
